Fix card width on smaller breakpoints

--- a/static/styles/homepage/blog-card.scss
+++ b/static/styles/homepage/blog-card.scss
@@ -40,6 +40,7 @@ a.blog-card-wrapper{
     }
     @include media-breakpoint-down(md) {
         width: 100%;
+        overflow: visible;
         &:not(:last-of-type){
             margin-right: 0;
             margin-bottom: var(--space-lg);
